# sgx-db

./: .gitignore  .vimws  CMakeLists.txt  Makefile  README.md  README.txt  bcache.cpp  bcache.hpp  columnsort.csv  db-tests.cpp  db-tests.hpp  db.cpp  db.hpp  env.cpp  main.cpp  obli.hpp  rand.csv  util.hpp
app/: CMakeLists.txt  apputil.cpp  apputil.hpp  bin_packing_join.cpp  bin_packing_join.hpp  bin_packing_join_helper.cpp  bin_packing_join_helper.hpp  db-tests.cpp  db-tests.hpp  env.cpp  env.hpp  main.cpp  time.cpp
app/scratch/: scratch.cpp
enclave/: CMakeLists.txt  aligned_alloc.cpp  bcache.cpp  bcache.hpp  bin_packing_join.cpp  bin_packing_join.hpp  bitonic.cpp  bitonic_sort.cpp  bitonic_sort.hpp  column_sort.cpp  column_sort.hpp  config.xml  db.cpp  db.hpp  dbg_buffer.hpp  enclave.edl  obli.hpp  quick_sort.cpp  quick_sort.hpp  sort_helper.cpp  sort_helper.hpp  spinlock.cpp  spinlock.hpp  test.cpp  tests.cpp  util.cpp  util.hpp  x86.hpp
enclave/bin_packing_join/: bin_packing_join.cpp  bin_packing_join.hpp  hash_bin_packing_join.cpp  hash_bin_packing_join.hpp  obli_bin_packing_join.cpp  obli_bin_packing_join.hpp  obliv_bin_packing_join.cpp  obliv_bin_packing_join.hpp
etc/: results.txt
include/: dbg.hpp  time.hpp
